--- a/tagflask/templates/base.html
+++ b/tagflask/templates/base.html
@@ -2,6 +2,13 @@
 
 {% block title %}TagApps{% endblock %}
 
+
+{% block head %}
+{{ super() }}
+<link rel="shortcut icon" href="{{ url_for('static', filename='tag-ico.png') }}" type="image/x-icon">
+<link rel="icon" href="{{ url_for('static', filename='tag-ico.png') }}" type="image/x-icon">
+{% endblock %}
+
 {% block navbar %}
 <div class="navbar navbar-inverse" role="navigation">
     <div class="container">
@@ -27,4 +34,9 @@
 <div class="container">
     {% block page_content %}{% endblock %}
 </div>
+{% endblock %}
+
+{% block scripts %}
+{{ super() }}
+{{ moment.include_moment() }}
 {% endblock %}
